# preparacion_comida

./: data.py  main.py  model.py  pyproject.toml
